[package]
name = "broadcaster"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "jwt-lib","utils"]

[dependencies]
jwt-lib = { path = "jwt-lib" } 
utils = { path = "utils" } 
dotenv = "0.15.0"
env_logger = "0.11.8"
actix-web = "4"
actix-ws = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] } 
uuid = { version = "1.8", features = ["v4"] }
